# ai-engineer-track

./: .gitignore  LICENSE  PROGRESS.md  README.md
notes/: README.md
notes/books/: karpathy-01-micrograd.md  karpathy-02-makemore.md
phase1-foundations/: README.md
phase1-foundations/week1-micrograd/: README.md  nn.py  pyproject.toml  train_moons.py  value.py
phase1-foundations/week1-micrograd/tests/: test_against_pytorch.py
phase1-foundations/week2-gpt-from-scratch/: README.md
phase1-foundations/week3-finetune-qwen/: README.md
phase1-foundations/week4-prompt-playground/: README.md
phase2-rag-evals/: README.md
phase2-rag-evals/week5-vector-store/: README.md
phase2-rag-evals/week6-rag-from-scratch/: README.md
phase2-rag-evals/week7-rag-evals/: README.md
phase2-rag-evals/week8-reranker/: README.md
phase3-agents/: README.md
phase3-agents/week10-react-reflexion/: README.md
phase3-agents/week11-memory/: README.md
phase3-agents/week12-mcp-server-ts/: README.md
phase3-agents/week13-observable-agent/: README.md
phase3-agents/week9-agent-no-framework/: README.md
phase4-rust-inference/: README.md
phase4-rust-inference/week14-prompt-playground-rust/: README.md
phase4-rust-inference/week15-inference-proxy/: README.md
phase4-rust-inference/week16-paged-attention-explainer/: README.md
phase4-rust-inference/week17-spec-decoding/: README.md
phase5-go-infra/: README.md
phase5-go-infra/week18-rag-ingest-go/: README.md
phase5-go-infra/week19-ollama-evals/: README.md
phase5-rust-internals/: README.md
phase6-frontier-capstone/: README.md
(+12 files in other folders)
