[project]
name = "week1-micrograd"
version = "0.1.0"
description = "Hand-rolled autograd engine and MLP, verified against PyTorch."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "torch>=2.4",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["value.py", "nn.py", "train_moons.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
